# Multiproj_calibration

./: CMakeLists.txt  manifest.xml
data/: associate.py  dist.txt  dist_no_init.txt  eval_iter.sh  evaluate_ate.py  quadrotor.prop  sim.prop
eval/: readme.txt  residual_max.txt  residual_mean.txt  timing.txt~  timing_2.txt  timing_2.txt~
include/: cluster.h  evaluation.h  extrinsic_calibration.h  groundtruth.h  mocap_defs.h  optimization.h  simulation.h  visualization.h
src/: cluster.cpp  evaluation.cpp  extrinsic_calibration.cpp  groundtruth.cpp  main.cpp  mocap_defs.cpp  optimization.cpp  simulation.cpp  visualization.cpp
